fix text alignn

--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,7 @@ h3 {
 
 @media (max-width: 1399px) {
     .change_word {
-        height: 6.9rem;
+        height: 6.8rem;
         /* margin-bottom: 12px; */
     }
 
